--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,9 @@
 
     <!-- Text related to Home fragment -->
 
-    <string name="user_rooms_text">Twoje Pokoje:</string>
+    <string name="user_rooms_text">POKOJE:</string>
     <string name="homeLogoDesc">Logo w górnej części HomeFragment</string>
+    <string name="fab_room_desc">Przycisk dodający Pokój</string>
 
     <!-- Text related to Add Room fragment -->
 
@@ -37,8 +38,8 @@
     <string name="add_room_button">Dodaj pokój</string>
 
     <!-- Text related to Room fragment -->
-    <string name="user_pot_devices_text">Twoje Doniczki:</string>
-    <string name="fab_room_desc">Przycisk dodający urządzenie</string>
+    <string name="user_pot_devices_text">DONICZKI:</string>
+    <string name="fab_device_desc">Przycisk dodający urządzenie</string>
 
     <!-- Text related to Add Device fragment -->
 
